# freetel

./: .bintray.json  .travis.yml  BRANCHING_AND_TAGGING  Makefile  ajamdemo.html  countdown.c  get_network.sh
attic/foxy/: README.txt
attic/freepbx-sandbox/: README.txt
attic/mini-asterisk-gui/: Makefile
attic/mini-asterisk-gui2/: README.txt  about.html  admin.js  diagnostics.js  install notes.txt  install_gui2.sh  login.html  logout.html  todo notes
attic/wispcar/: Makefile  README  batt_test.sh  documentation.txt  gschem-print.scm  log2octave.sh  wispcar.asm  wispcar.sch
codec2/: CMakeLists.txt  Makefile.in  README  README_fdmdv.txt
codec2/branches/0.4/: CMakeLists.txt
codec2/branches/0.4/unittest/: t16_8.c
codec2/branches/0.5/: CMakeLists.txt
codec2/src/: CMakeLists.txt  Makefile.in
codec2/tags/0.4/: CMakeLists.txt
codec2/tags/0.4/stm32/inc/: stm32f4_adc_tuner.h
codec2/tags/0.4/stm32/src/: dac_ut.c
codec2/tags/0.6/: CMakeLists.txt
codec2/unittest/: Makefile.am  Makefile.in
dilimesh/: README.txt
dilimesh/cgi-bin/: addnode.cgi  delnode.cgi  getnodes.cgi  getsig.cgi  getvis.cgi
dilimesh/dilimesh/: dilimesh.html
dilimesh/scripts/: sigstr.sh
easy-asterisk-gui/: Makefile  README.txt  about.sh  admin.sh  ajamindex.html  at-530.html  banner.html  dashboard.js  dashboard.sh  easy.js  extensions.conf  faq.html  get_network.sh  index.html  ipphones.pl  ipphones.sh  login.sh  logout.sh  menu.html  network.js  network.sh  phone.js  phone.pl  phone.sh  phones.js  phones.pl  phones.sh  restart.sh  set_network.sh  set_ring.pl  set_ring.sh  set_voipline.sh  set_voiplines.pl  set_voiplines.sh  sip.conf  test.sh  tooltip.css  tooltips.html  update_revision.sh  update_version.sh  (+4 more)
easy-asterisk-gui/cgi-bin/: about.sh  admin.sh  check_loggedin.sh  faq.sh  ipphones.pl  ipphones.sh  login.sh  logout.sh  menu.html  network.js  network.sh  phones.pl  phones.sh  set_network.sh  set_ring.sh  set_voiplines.pl  set_voiplines.sh  tooltips.html  voiplines.pl  voiplines.sh
fdmdv2/: CMakeLists.txt  README.cmake  fdmdv2.project
fdmdv2-dev/: CMakeLists.txt  ChangeLog  README.Win32  README.cmake  README.osx  README.txt  credits.txt
fdmdv2-dev/cmake/: BuildCodec2.cmake  BuildPortaudio.cmake  BuildSamplerate.cmake  BuildSndfile.cmake  BuildSox.cmake  BuildSpeex.cmake  BuildWxWidgets.cmake
fdmdv2-dev/src/: CMakeLists.txt  Makefile.linux  Makefile.linux.dmw  Makefile.win32  dlg_filter.cpp  dlg_options.cpp  dlg_options.h  fdmdv2_defines.h  fdmdv2_main.cpp  fdmdv2_main.h  fdmdv2_pa_wrapper.cpp  fdmdv2_plot_waterfall.cpp  topFrame.cpp  version.h
fdmdv2/cmake/: BuildCodec2.cmake  BuildSndfile.cmake  BuildSox.cmake  BuildWxWidgets.cmake
fdmdv2/obsolete/: README.Win32
fdmdv2/src/: Makefile.linux  Makefile.win32.dmw  dlg_audiooptions.cpp  dlg_filter.cpp  dlg_options.cpp  dlg_options.h  dlg_ptt.cpp  fdmdv2_defines.h  fdmdv2_main.cpp  fdmdv2_main.h  topFrame.cpp  topFrame.h  varicode.c  varicode.h  varicode_table.h  version.h
foxy/: README.txt  foxy.css  foxy.html
foxy/cgi-bin/: cleardb.cgi
freedv-dev/: .travis.yml
freedv-server/: CMakeLists.txt  Doxyfile.in  LICENSE  README.dox
freedv-server/cmake/: UseDoxygen.cmake
freedv-server/googletest/: CMakeCache.txt  Makefile  cmake_install.cmake  config.status  libtool
freedv-server/parameters/: c-flags.txt  codename.txt  cxx-flags-gtest.txt  cxx-flags.txt  version.txt
freedv-server/source/: audio_device.cpp  audio_in_default.cpp  audio_input.cpp  audio_out_default.cpp  audio_output.cpp  audio_sink.cpp  base.cpp  big_main.cpp  blank_panel.cpp  codec.cpp  codec2.cpp  codec_noop.cpp  driver_manager.cpp  drivers.h  event_handler.cpp  event_posix.cpp  fifo.cpp  framer.cpp  framer_noop.cpp  global.cpp  interfaces.cpp  interpolate.cpp  interpolator.cpp  io_device.cpp  keying.cpp  keying_sink.cpp  libevent.cpp  main.cpp  modem.cpp  modem_codec2_reverse.cpp  modem_fdmdv2.cpp  modem_noop.cpp  ptt_constant.cpp  ptt_input.cpp  run.cpp  text_constant.cpp  text_input.cpp  tiny_main.cpp  tone.cpp  user_interface.cpp  (+1 more)
freedv-server/source/hid/: hid.cpp
freedv-server/source/hid/Doc/: HID_TYPES.txt  ps3.txt
freedv-server/source/platform/linux/: alsa.cpp  alsa.h  audio_in_alsa.cpp  audio_out_alsa.cpp  evdev.cpp  evdev.h  privilege.cpp  ptt_evdev.cpp  scheduler.cpp  test_evdev.c
freedv-server/source/platform/posix/: platform.h  poll.cpp  privilege.cpp  scheduler.cpp
freedv-server/source/test/: audio_sink.cpp  base.cpp  blank_panel.cpp  fifo.cpp  keying_sink.cpp  ptt_constant.cpp  text_constant.cpp  tone.cpp
freepbx-sandbox/: Makefile  README.txt
freepbx-sandbox/files/: lighttpd.conf  retrieve_conf.inc.php
freepbx-sandbox/patch/: common.patch  freepbx.patch
mini-asterisk-gui/: Makefile  README.txt
mini-asterisk-gui/cgi-bin/: about.sh  admin.sh  at-620r.html  faq.html  ipphones.sh  login.sh  menu.html  mini.css  network.js  network.sh  phones.pl  phones.sh  set_network.sh  set_voiplines.pl  set_voiplines.sh  tooltips.html  voiplines.js  voiplines.pl  voiplines.sh
mini-asterisk-gui2/: README.txt  about.html  about.js  admin.html  admin.js  configure_AT-530.html  configure_AT-620R.html  configure_AT.js  devel notes.txt  diagnostics.html  diagnostics.js  faq.html  faq.js  install notes.txt  install_gui2.sh  ipphones.html  ipphones.js  logout.js  menu.js  minicommon.js  ministyle.css  network.html  network.js  phones.html  phones.js  system.html  system.js  todo 2012_10.txt  todo 2012_11.txt  todo notes  tooltip.css  tooltips.js  voiplines.html  voiplines.js
mini-asterisk-gui2/cgi-bin/: asterisk.cgi  catproc.cgi  commentkey.cgi  fpingnodes.cgi  getdhcp.cgi  getemergencyip.cgi  getnetwork.cgi  ifconfig.cgi  install.cgi  ipkg.cgi  network-backdoor.cgi  network-static.cgi  network.cgi  restart.cgi  setline.cgi  setlinekey.cgi  setlinekey2.cgi  setpassword.cgi  setring.cgi  setservice.cgi  setword.cgi  sipshowpeers.cgi  (+2 more)
rfmodem/: CMakeLists.txt
smartmic/: README  smartmic002 - use cases.txt
wispcar/: batt_test.m  caliba.m  calibb.m  documentation.txt  test_watchdog.tcl  wispcar.asm  wispcar.sch  wispcarb.asm
(+457 files in other folders)
